dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(adaptmgr, 1.0, https://bitbucket.org/gamoreno/adaptmgr/issues)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CXX
AC_PROG_RANLIB
AM_PROG_AR

AC_CONFIG_FILES(Makefile src/Makefile include/Makefile)
AC_OUTPUT

