# include
include_HEADERS = pladapt/AdaptationManager.h pladapt/Configuration.h \
									pladapt/AdaptationPlanner.h pladapt/State.h \
	pladapt/timeseries/EnvPredictionRecord.h pladapt/PlanDB.h \
	pladapt/AllTactics.h \
	pladapt/ConfigurationManager.h pladapt/ConfigurationSpace.h \
	pladapt/DTMCPartitionedStates.h pladapt/EnvironmentDTMCPartitioned.h \
	pladapt/Environment.h pladapt/GenericConfiguration.h \
	pladapt/GenericConfigurationManager.h pladapt/GenericEnvironmentDTMCPartitioned.h \
	pladapt/GenericEnvironment.h pladapt/GenericProperties.h \
	pladapt/GenericUtilityFunction.h pladapt/JavaSDPAdaptationManager.h \
	pladapt/JointEnvironment.h pladapt/PMCAdaptationManager.h \
	pladapt/PMCRAAdaptationManager.h pladapt/PRISMWrapper.h pladapt/ReachabilityRelation.h \
	pladapt/SDPAdaptationManager.h pladapt/SDPRAAdaptationManager.h \
	pladapt/timeseries/LESTimeSeriesPredictor.h \
	pladapt/timeseries/OversamplingTimeSeriesPredictor.h \
	pladapt/timeseries/ScenarioTree.h pladapt/timeseries/TimeSeriesPredictor.h \
	pladapt/UtilityFunction.h pladapt/Utils.h
	
