# include
include_HEADERS = dartam/DartAdaptationManager.h dartam/DartConfiguration.h \
	dartam/DartConfigurationManager.h dartam/DartDTMCEnvironment.h \
	dartam/DartEnvironment.h dartam/DartPMCHelper.h \
	dartam/DartSimpleEnvironment.h dartam/DartUtilityFunction.h \
	dartam/DeterministicTargetSensor.h dartam/DeterministicThreat.h \
	dartam/EnvironmentMonitor.h dartam/Parameters.h dartam/RandomSeed.h \
	dartam/RealEnvironment.h dartam/Route.h dartam/Sensor.h \
	dartam/TargetSensor.h dartam/Threat.h
	
